--- a/plugin.xml
+++ b/plugin.xml
@@ -61,9 +61,9 @@
             icon="icons/sample.gif"
             category="cn.edu.xidian.ictt.msvlide.newwizards.category"
             class="cn.edu.xidian.ictt.msvlide.ui.wizard.CreateProject"
-            preferredPerspectives=""
+            preferredPerspectives="cn.edu.xidian.ictt.msvlide.perspective.one"
             project="true"
-            finalPerspective=""
+            finalPerspective="cn.edu.xidian.ictt.msvlide.perspective.one"
             id="cn.edu.xidian.ictt.msvlide.newwizards.project">
 			<description>
 				Create a new MSVL project
@@ -121,7 +121,7 @@
 		<actionSet
 			label="MSVL ActionSet"
 			visible="true"
-			id="MSVLActionSet">
+			id="cn.edu.xidian.ictt.msvlide.ActionSet">
 			<menu
 				label="MSVL"
 				path="additions"
@@ -210,7 +210,7 @@
             </launchMode>
             <launchMode 
 				mode="debug"
-				perspective=""
+				perspective="cn.edu.xidian.ictt.msvlide.perspective.one"
 				description="Create a configuration that will debug a MSVL application.">
             </launchMode>
 		</launchConfigurationTabGroup>
@@ -225,6 +225,28 @@
 		</launchConfigurationTypeImage>
 	</extension>
 	<!-- launch end -->
+	
+	<extension
+		point="org.eclipse.ui.perspectives">
+		<perspective
+			id="cn.edu.xidian.ictt.msvlide.perspective.one"
+			name="MSVL"
+			icon="icons/sample.gif"
+			class="cn.edu.xidian.ictt.msvlide.perspective.Factory">
+			<description>
+				MSVL Development Kit Perspective
+			</description>
+		</perspective>
+	</extension>
+	
+	<extension
+		point="org.eclipse.core.runtime.adapters">
+		<factory 
+			class="cn.edu.xidian.ictt.msvlide.launch.MAdapterFactory" 
+			adaptableType="org.eclipse.core.resources.IResource">
+			<adapter type="org.eclipse.debug.ui.actions.ILaunchable"/>
+		</factory>
+	</extension>
 	
 </plugin>
 
