just for backup - 2017-1-18

--- a/plugin.properties
+++ b/plugin.properties
@@ -2,7 +2,10 @@
 MSVL = MSVL
 MSVL.Project = MSVL Project
 MSVL.Project.Nature = MSVL Project Nature
+MSVL.Project.Nature.Images.Name = MSVL Project Nature Images
 MSVL.Project.Builder = MSVL Project Builder
+MSVL.Project.PMC.Builder = MSVL Project PMC Builder
+MSVL.Project.UMC.Builder = MSVL Project UMC Builder
 MSVL.Project.Category = MSVL
 MSVL.Project.New.Description = Create a new MSVL project
 MSVL.Project.Property.Page.Name = Build and Run
@@ -13,6 +16,9 @@ MSVL.File.New.Function = MSVL Function File
 MSVL.File.New.Function.Description = Create a new MSVL Function File
 MSVL.File.New.Header = MSVL Header File
 MSVL.File.New.Header.Description = Create a new MSVL Header File
+MSVL.File.New.Property = MSVL Property File
+MSVL.File.New.Property.Description = Create a new MSVL Property File
+
 
 MSVL.Builder.Console = MSVL Builder Console
 
@@ -43,6 +49,8 @@ MSVL.LaunchConfig.Delegate.Name = MSVL Application Launch Tooling
 MSVL.LaunchConfig.Delegate.Description = This MSVL tooling will run or debug MSVL code.
 
 MSVL.LaunchShortcut.Name = MSVL Application
+MSVL.ParallelModelChecker.Shortcut.Name = Parallel Model Checking
+MSVL.UnifiedModelChecker.Shortcut.Name = Unified Model Checking
 
 MSVL.LaunchConfigurationTabGroups.Run.Description = Create a configuration that will launch a MSVL application.
 MSVL.LaunchConfigurationTabGroups.Debug.Description = Create a configuration that will debug a MSVL application.
